fix: only enforce user activity status when self-registering